# non-empty-vec

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CI.yml
src/: lib.rs
