[package]
name = "non-empty-vec"
description = "`NonEmpty` vector implementation, ensure non-emptiness by construction."
version = "0.2.3"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/yihuang/non-empty-vec"

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
